IHM/7. k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  labels:
    app: ml-service
spec:
  type: ClusterIP
  selector:
    app: ml-service
  ports:
    - name: http
      port: 80
      targetPort: 8888
      protocol: TCP
